# itia_ros_control

./: README.md  contributors.txt
itia_cart_impedance_control/: CMakeLists.txt  package.xml  plugin.xml
itia_cart_impedance_control/include/itia_cart_impedance_control/: itia_cart_impedance_control.h
itia_cart_impedance_control/src/itia_cart_impedance_control/: itia_cart_impedance_control.cpp
itia_cascade_control/: CMakeLists.txt  package.xml  plugin.xml
itia_cascade_control/images/: cascade_control_scheme.odg
itia_cascade_control/include/itia_cascade_control/: itia_cascade_control.h  itia_cascade_control_effort_interface.h  itia_cascade_control_topic_interface.h
itia_cascade_control/script/: create_velocity_control.m  print_filter.m  print_vel_controller.m  test.yaml
itia_cascade_control/src/itia_cascade_control/: itia_cascade_control.cpp  itia_cascade_control_effort_interface.cpp  itia_cascade_control_topic_interface.cpp
itia_deflection_control/: CMakeLists.txt  package.xml  plugin.xml
itia_deflection_control/include/itia_deflection_control/: itia_deflection_control.h
itia_deflection_control/src/itia_deflection_control/: itia_deflection_control.cpp
itia_driver_mass_controller/: CMakeLists.txt  package.xml  plugin.xml
itia_driver_mass_controller/include/itia_driver_mass_controller/: itia_driver_mass_controller.h
itia_driver_mass_controller/script/: create_load_control.m  create_load_controller.m  print_driven_mass_controller.m  tmp.txt
itia_driver_mass_controller/src/itia_driver_mass_controller/: itia_driver_mass_controller.cpp
itia_fake_controller_system/: CMakeLists.txt  package.xml  plugin.xml
itia_fake_controller_system/include/itia_fake_controller_system/: itia_fake_controller_system.h
itia_fake_controller_system/src/itia_fake_controller_system/: itia_fake_controller_system.cpp
itia_helios_controller/: CMakeLists.txt  itia_helios_controller.kdev4  itia_helios_controller_plugin.xml  package.xml
itia_helios_controller/include/itia_helios_controller/: itia_fir_controller.h  itia_fir_controller_cart_teleop.h  itia_fir_controller_joint_teleop.h  itia_helios_controller.h
itia_helios_controller/src/itia_helios_controller/: itia_fir_controller.cpp  itia_fir_controller_cart_teleop.cpp  itia_fir_controller_joint_teleop.cpp  itia_helios_controller.cpp
itia_joint_impedance_control/: CMakeLists.txt  package.xml  plugin.xml
itia_joint_impedance_control/include/itia_joint_impedance_control/: itia_joint_impedance_control.h
itia_joint_impedance_control/src/itia_joint_impedance_control/: itia_joint_impedance_control.cpp
itia_model_feedforward/: CMakeLists.txt  package.xml  plugin.xml
itia_model_feedforward/include/itia_model_feedforward/: itia_model_feedforward.h
itia_model_feedforward/src/itia_model_feedforward/: itia_model_feedforward.cpp
itia_nodelet_hw_interface/: CMakeLists.txt  nodelet_hw_plugins.xml  package.xml
itia_nodelet_hw_interface/include/itia_nodelet_hw_interface/: main_nodelet_hw_interface.h  nodelet_hw_interface.h
itia_nodelet_hw_interface/src/itia_nodelet_hw_interface/: main_nodelet_hw_interface.cpp  nodelet_hw_interface.cpp
itia_ros_control/: CMakeLists.txt  package.xml
itia_velocity_control/: CMakeLists.txt  package.xml  plugin.xml
itia_velocity_control/include/itia_velocity_control/: itia_velocity_control.h  itia_velocity_control_on_velocity_interface.h
itia_velocity_control/src/itia_velocity_control/: itia_velocity_control.cpp  itia_velocity_control_on_velocity_interface.cpp
itia_virtual_sensor/: CMakeLists.txt  package.xml  plugin.xml
itia_virtual_sensor/include/itia_virtual_sensor/: itia_velocity_sensor.h  itia_virtual_sensor.h
itia_virtual_sensor/src/itia_virtual_sensor/: itia_velocity_sensor.cpp  itia_virtual_sensor.cpp
scripts/: print_first_order_filter.m
